CMake: Fix bookmark styling
Applied the `bookmark` class to section anchors which offsets them from the top
by the width of the navbar. This prevents the bars from covering the headers
when their anchors are invoked.

Also got rid of the 40px top margin for H1 headers. It was unecessary and
caused the pilcrow to be mis-aligned.

--- a/CMake/docs/html/resources/docs.css
+++ b/CMake/docs/html/resources/docs.css
@@ -18,9 +18,6 @@ p {
 h1, h2, h3, h4, h5, h6 {
   margin: 0px 0 15px 0;
 }
-  h1 {
-    margin-top: 40px;
-  }
 #container {
   position: relative;
 }
